# django-history

./: MANIFEST.in  README.rst  setup.cfg
django_history/: __init__.py  admin.py  apps.py  defaults.py  models.py  signals.py  utils.py
django_history/locale/en/LC_MESSAGES/: django.mo  django.po
django_history/migrations/: 0001_initial.py  0002_auto_20210624_1414.py  0003_auto_20210815_1815.py
django_history/templates/history/admin/: list.html
history/: __init__.py  apps.py  defaults.py  middleware.py  models.py  signals.py
history/migrations/: 0002_auto_20201112_1850.py
